@@ -28,7 +28,7 @@ import static org.mockito.ArgumentMatchers.anyBoolean;
 import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
-class ApplySubcommandTest {
+class DiffSubcommandTest {
     @Mock
     private LoginService loginService;
 
@@ -47,15 +47,18 @@ class ApplySubcommandTest {
     @Mock
     private KafkactlCommand kafkactlCommand;
 
+    @Mock
+    private CommandLine.Model.CommandSpec commandSpec;
+
     @InjectMocks
-    private ApplySubcommand applySubcommand;
+    private DiffSubcommand diffSubcommand;
 
     @Test
-    void shouldNotApplyWhenNotAuthenticated() {
+    void shouldNotDiffWhenNotAuthenticated() {
         when(loginService.doAuthenticate())
                 .thenReturn(false);
 
-        CommandLine cmd = new CommandLine(applySubcommand);
+        CommandLine cmd = new CommandLine(diffSubcommand);
         StringWriter sw = new StringWriter();
         cmd.setErr(new PrintWriter(sw));
 
@@ -65,11 +68,11 @@ class ApplySubcommandTest {
     }
 
     @Test
-    void shouldNotApplyWhenNoFileInStdin() {
+    void shouldNotDiffWhenNoFileInStdin() {
         when(loginService.doAuthenticate())
                 .thenReturn(true);
 
-        CommandLine cmd = new CommandLine(applySubcommand);
+        CommandLine cmd = new CommandLine(diffSubcommand);
         StringWriter sw = new StringWriter();
         cmd.setErr(new PrintWriter(sw));
 
@@ -79,13 +82,13 @@ class ApplySubcommandTest {
     }
 
     @Test
-    void shouldNotApplyWhenYmlFileNotFound() {
+    void shouldNotDiffWhenYmlFileNotFound() {
         when(loginService.doAuthenticate())
                 .thenReturn(true);
         when(fileService.computeYamlFileList(any(), anyBoolean()))
                 .thenReturn(Collections.emptyList());
 
-        CommandLine cmd = new CommandLine(applySubcommand);
+        CommandLine cmd = new CommandLine(diffSubcommand);
         StringWriter sw = new StringWriter();
         cmd.setErr(new PrintWriter(sw));
 
@@ -95,7 +98,7 @@ class ApplySubcommandTest {
     }
 
     @Test
-    void shouldNotApplyWhenInvalidResources() {
+    void shouldNotDiffWhenInvalidResources() {
         Resource resource = Resource.builder()
                 .kind("Topic")
                 .apiVersion("v1")
@@ -114,7 +117,7 @@ class ApplySubcommandTest {
         when(apiResourcesService.validateResourceTypes(any()))
                 .thenReturn(Collections.singletonList(resource));
 
-        CommandLine cmd = new CommandLine(applySubcommand);
+        CommandLine cmd = new CommandLine(diffSubcommand);
         StringWriter sw = new StringWriter();
         cmd.setErr(new PrintWriter(sw));
 
@@ -124,7 +127,7 @@ class ApplySubcommandTest {
     }
 
     @Test
-    void shouldNotApplyWhenNamespaceMismatch() {
+    void shouldNotDiffWhenNamespaceMismatch() {
         Resource resource = Resource.builder()
                 .kind("Topic")
                 .apiVersion("v1")
@@ -146,7 +149,7 @@ class ApplySubcommandTest {
         when(apiResourcesService.validateResourceTypes(any()))
                 .thenReturn(Collections.emptyList());
 
-        CommandLine cmd = new CommandLine(applySubcommand);
+        CommandLine cmd = new CommandLine(diffSubcommand);
         StringWriter sw = new StringWriter();
         cmd.setErr(new PrintWriter(sw));
 
@@ -156,7 +159,7 @@ class ApplySubcommandTest {
     }
 
     @Test
-    void shouldNotApplyNullResponse() {
+    void shouldNotDiffWhenNullResponse() {
         Resource resource = Resource.builder()
                 .kind("Topic")
                 .apiVersion("v1")
@@ -189,10 +192,12 @@ class ApplySubcommandTest {
                 .thenReturn("namespace");
         when(apiResourcesService.getListResourceDefinition())
                 .thenReturn(Collections.singletonList(apiResource));
+        when(resourceService.getSingleResourceWithType(any(), any(), any(), anyBoolean()))
+                .thenReturn(null);
         when(resourceService.apply(any(), any(), any(), anyBoolean()))
                 .thenReturn(null);
 
-        CommandLine cmd = new CommandLine(applySubcommand);
+        CommandLine cmd = new CommandLine(diffSubcommand);
         StringWriter sw = new StringWriter();
         cmd.setErr(new PrintWriter(sw));
 
@@ -202,7 +207,20 @@ class ApplySubcommandTest {
     }
 
     @Test
-    void shouldApply() {
+    void shouldDiff() {
+        Resource live = Resource.builder()
+                .kind("Topic")
+                .apiVersion("v1")
+                .metadata(ObjectMeta.builder()
+                        .name("prefix.topic")
+                        .namespace("namespace")
+                        .build())
+                .spec(Map.of(
+                        "replicationFactor", 3,
+                        "partitions", 3
+                ))
+                .build();
+
         Resource resource = Resource.builder()
                 .kind("Topic")
                 .apiVersion("v1")
@@ -210,7 +228,11 @@ class ApplySubcommandTest {
                         .name("prefix.topic")
                         .namespace("namespace")
                         .build())
-                .spec(Collections.emptyMap())
+                .spec(Map.of(
+                        "replicationFactor", 1,
+                        "partitions", 1,
+                        "cleanup.policy", "delete"
+                ))
                 .build();
 
         ApiResource apiResource = ApiResource.builder()
@@ -235,29 +257,45 @@ class ApplySubcommandTest {
                 .thenReturn("namespace");
         when(apiResourcesService.getListResourceDefinition())
                 .thenReturn(Collections.singletonList(apiResource));
+        when(resourceService.getSingleResourceWithType(any(), any(), any(), anyBoolean()))
+                .thenReturn(live);
         when(resourceService.apply(any(), any(), any(), anyBoolean()))
                 .thenReturn(HttpResponse
                         .ok(resource)
                         .header("X-Ns4kafka-Result", "Created"));
 
-        CommandLine cmd = new CommandLine(applySubcommand);
+        CommandLine cmd = new CommandLine(diffSubcommand);
         StringWriter sw = new StringWriter();
         cmd.setOut(new PrintWriter(sw));
 
         int code = cmd.execute("-f", "topic.yml");
         assertEquals(0, code);
-        assertTrue(sw.toString().contains("Success Topic/prefix.topic (Created)."));
+        assertTrue(sw.toString().contains("--- Topic/prefix.topic-LIVE"));
+        assertTrue(sw.toString().contains("+++ Topic/prefix.topic-MERGED"));
+        assertTrue(sw.toString().contains("@@ -8,6 +8,7 @@"));
+        assertTrue(sw.toString().contains("   name: prefix.topic"));
+        assertTrue(sw.toString().contains("   namespace: namespace"));
+        assertTrue(sw.toString().contains(" spec:"));
+        assertTrue(sw.toString().contains("-  partitions: 3"));
+        assertTrue(sw.toString().contains("-  replicationFactor: 3"));
+        assertTrue(sw.toString().contains("+  cleanup.policy: delete"));
+        assertTrue(sw.toString().contains("+  replicationFactor: 1"));
     }
 
     @Test
-    void shouldApplyDryRun() {
+    void shouldDiffWhenNoLive() {
         Resource resource = Resource.builder()
                 .kind("Topic")
                 .apiVersion("v1")
                 .metadata(ObjectMeta.builder()
                         .name("prefix.topic")
+                        .namespace("namespace")
                         .build())
-                .spec(Collections.emptyMap())
+                .spec(Map.of(
+                        "replicationFactor", 1,
+                        "partitions", 1,
+                        "cleanup.policy", "delete"
+                ))
                 .build();
 
         ApiResource apiResource = ApiResource.builder()
@@ -282,23 +320,35 @@ class ApplySubcommandTest {
                 .thenReturn("namespace");
         when(apiResourcesService.getListResourceDefinition())
                 .thenReturn(Collections.singletonList(apiResource));
+        when(resourceService.getSingleResourceWithType(any(), any(), any(), anyBoolean()))
+                .thenReturn(null);
         when(resourceService.apply(any(), any(), any(), anyBoolean()))
                 .thenReturn(HttpResponse
                         .ok(resource)
                         .header("X-Ns4kafka-Result", "Created"));
 
-        CommandLine cmd = new CommandLine(applySubcommand);
+        CommandLine cmd = new CommandLine(diffSubcommand);
         StringWriter sw = new StringWriter();
         cmd.setOut(new PrintWriter(sw));
 
-        int code = cmd.execute("-f", "topic.yml", "--dry-run");
+        int code = cmd.execute("-f", "topic.yml");
         assertEquals(0, code);
-        assertTrue(sw.toString().contains("Dry run execution."));
-        assertTrue(sw.toString().contains("Success Topic/prefix.topic (Created)."));
+        assertTrue(sw.toString().contains("--- Topic/prefix.topic-LIVE"));
+        assertTrue(sw.toString().contains("+++ Topic/prefix.topic-MERGED"));
+        assertTrue(sw.toString().contains("@@ -1,0 +1,14 @@"));
+        assertTrue(sw.toString().contains("+---"));
+        assertTrue(sw.toString().contains("+apiVersion: v1"));
+        assertTrue(sw.toString().contains("+kind: Topic"));
+        assertTrue(sw.toString().contains("+metadata:"));
+        assertTrue(sw.toString().contains("+  name: prefix.topic"));
+        assertTrue(sw.toString().contains("+  namespace: namespace"));
+        assertTrue(sw.toString().contains("+spec:"));
+        assertTrue(sw.toString().contains("+  partitions: 1"));
+        assertTrue(sw.toString().contains("+  replicationFactor: 1"));
     }
 
     @Test
-    void shouldApplySchema() {
+    void shouldDiffSchemaWhenNoLive() {
         Map<String, Object> specs = new HashMap<>();
         specs.put(SCHEMA_FILE, "src/test/resources/person.avsc");
 
@@ -334,23 +384,43 @@ class ApplySubcommandTest {
                 .thenReturn("namespace");
         when(apiResourcesService.getListResourceDefinition())
                 .thenReturn(Collections.singletonList(apiResource));
+        when(resourceService.getSingleResourceWithType(any(), any(), any(), anyBoolean()))
+                .thenReturn(null);
         when(resourceService.apply(any(), any(), any(), anyBoolean()))
                 .thenReturn(HttpResponse
                         .ok(resource)
                         .header("X-Ns4kafka-Result", "Created"));
 
-        CommandLine cmd = new CommandLine(applySubcommand);
+        CommandLine cmd = new CommandLine(diffSubcommand);
         StringWriter sw = new StringWriter();
         cmd.setOut(new PrintWriter(sw));
 
         int code = cmd.execute("-f", "topic.yml");
         assertEquals(0, code);
         assertFalse(resource.getSpec().get("schema").toString().isBlank());
-        assertTrue(sw.toString().contains("Success Schema/prefix.schema (Created)."));
+        assertTrue(sw.toString().contains("--- Schema/prefix.schema-LIVE"));
+        assertTrue(sw.toString().contains("+++ Schema/prefix.schema-MERGED"));
+        assertTrue(sw.toString().contains("@@ -1,0 +1,19 @@"));
+        assertTrue(sw.toString().contains("+---"));
+        assertTrue(sw.toString().contains("+apiVersion: v1"));
+        assertTrue(sw.toString().contains("+kind: Schema"));
+        assertTrue(sw.toString().contains("+metadata:"));
+        assertTrue(sw.toString().contains("+  cluster: null"));
+        assertTrue(sw.toString().contains("+  labels: null"));
+        assertTrue(sw.toString().contains("+  name: prefix.schema"));
+        assertTrue(sw.toString().contains("+  namespace: namespace"));
+        assertTrue(sw.toString().contains("+  schema: \"{\\r\\n  \\\"namespace\\\": \\\"com.michelin.kafkactl\\\",\\r\\n  \\\"type\\\": \\\"record\\\"\\"));
+        assertTrue(sw.toString().contains("+    ,\\r\\n  \\\"name\\\": \\\"PersonAvro\\\",\\r\\n  \\\"fields\\\": [\\r\\n    {\\r\\n      \\\"name\\\"\\"));
+        assertTrue(sw.toString().contains("+    : \\\"firstName\\\",\\r\\n      \\\"type\\\": [\\r\\n        \\\"string\\\"\\r\\n      ],\\r\\n  \\"));
+        assertTrue(sw.toString().contains("+    \\    \\\"doc\\\": \\\"First name of the person\\\"\\r\\n    },\\r\\n    {\\r\\n      \\\"name\\\"\\"));
+        assertTrue(sw.toString().contains("+    : \\\"lastName\\\",\\r\\n      \\\"type\\\": [\\r\\n        \\\"null\\\",\\r\\n        \\\"string\\\"\\"));
+        assertTrue(sw.toString().contains("+    \\r\\n      ],\\r\\n      \\\"default\\\": null,\\r\\n      \\\"doc\\\": \\\"Last name of the\\"));
+        assertTrue(sw.toString().contains("+    \\ person\\\"\\r\\n    }\\r\\n  ]\\r\\n}\\r\\n\""));
+        assertTrue(sw.toString().contains("+  schemaFile: src/test/resources/person.avsc"));
     }
 
     @Test
-    void shouldApplyInlineSchema() {
+    void shouldDiffInlineSchema() {
         Map<String, Object> specs = new HashMap<>();
         specs.put("schema", "{schema}");
 
@@ -390,17 +460,28 @@ class ApplySubcommandTest {
                 .thenReturn(HttpResponse
                         .ok(resource));
 
-        CommandLine cmd = new CommandLine(applySubcommand);
+        CommandLine cmd = new CommandLine(diffSubcommand);
         StringWriter sw = new StringWriter();
         cmd.setOut(new PrintWriter(sw));
 
         int code = cmd.execute("-f", "topic.yml");
         assertEquals(0, code);
-        assertTrue(sw.toString().contains("Success Schema/prefix.schema."));
+        assertTrue(sw.toString().contains("--- Schema/prefix.schema-LIVE"));
+        assertTrue(sw.toString().contains("+++ Schema/prefix.schema-MERGED"));
+        assertTrue(sw.toString().contains("@@ -1,0 +1,12 @@"));
+        assertTrue(sw.toString().contains("+---"));
+        assertTrue(sw.toString().contains("+apiVersion: v1"));
+        assertTrue(sw.toString().contains("+kind: Schema"));
+        assertTrue(sw.toString().contains("+metadata:"));
+        assertTrue(sw.toString().contains("+  cluster: null"));
+        assertTrue(sw.toString().contains("+  labels: null"));
+        assertTrue(sw.toString().contains("+  name: prefix.schema"));
+        assertTrue(sw.toString().contains("+  namespace: namespace"));
+        assertTrue(sw.toString().contains("+  schema: '{schema}'"));
     }
 
     @Test
-    void shouldNotApplySchemaWhenNotExist() {
+    void shouldNotDiffSchemaWhenNotExist() {
         Map<String, Object> specs = new HashMap<>();
         specs.put(SCHEMA_FILE, "src/test/resources/not-exist.avsc");
 
@@ -437,7 +518,7 @@ class ApplySubcommandTest {
         when(apiResourcesService.getListResourceDefinition())
                 .thenReturn(Collections.singletonList(apiResource));
 
-        CommandLine cmd = new CommandLine(applySubcommand);
+        CommandLine cmd = new CommandLine(diffSubcommand);
         StringWriter sw = new StringWriter();
         cmd.setErr(new PrintWriter(sw));
 
